# spano-fitness-app

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
database/: models.py  schemas.py
routes/: admin.py  ai_assistant.py  auth.py  user_dashboard.py  webhook.py
security/: security_config.py
templates/: admin_dashboard.html  base.html  dashboard.html  login.html  signup.html
